# python-semantic-release-cookiecutter

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml  rfc.md
.github/: copilot-instructions.md
.github/workflows/: pr-title-check.yml  release.yml
.prompts/: semantic-release.md
docs/: semantic-release.md
{{cookiecutter.project_slug}}/: .gitignore  .releaserc.json  LICENSE  SETUP.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: release.yml
{{cookiecutter.project_slug}}/tests/: test_main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  main.py
