[tool.poetry]
name = "python-semantic-release-cookiecutter"
version = "1.0.1"
description = "A cookiecutter template for creating Python projects with automated semantic release capabilities using GitHub Actions and Poetry."
authors = ["Vichoko <your-email@example.com>"]
readme = "README.md"
homepage = "https://github.com/Vichoko/python-semantic-release-cookiecutter"
repository = "https://github.com/Vichoko/python-semantic-release-cookiecutter"
documentation = "https://github.com/Vichoko/python-semantic-release-cookiecutter"
license = "MIT"
keywords = ["cookiecutter", "template", "python", "semantic-release", "poetry", "github-actions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
isort = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
